src/objects/Hub__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_Hub__c</fullName>
        <label>Description Hub</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Postalcode__c</fullName>
        <label>Postalcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_ID__c</fullName>
        <externalId>true</externalId>
        <label>SF_ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Hub</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Hub Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hubs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>